# Genetic_Algo_expt

./: CMakeLists.txt
depricated/: deprecated.cpp
files/: food_data_2.csv
include/: genetic_algo.h  getFoodData.h
src/: genetic_algo.cpp  getFoodData.cpp  main.cpp  tutorial1.cpp
